--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <i class="bi bi-moon-stars-fill"></i>
         </button>
 
-        <!-- Portfolio link -->
+        <!-- Portfolio link yup-->
         <a id="portfolio-link" href="https://samanthafongg.myportfolio.com/" target="_blank">https://samanthafongg.myportfolio.com/</a>
 
         <!-- GitHub link -->
