Updated page dimensions

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <div class="page" id="page1">
                 <div class="front_page">
                     <label for="page1_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_foreword copy.png" alt="Forewordr">
+                    <img class="page" src="./assets/images/pages/lb_foreword copy.png" alt="Forewordr">
                     <!-- <img class="front_content" src="./assets/images/pages/page1.webp" alt="Front content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page1_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_alive1.png" alt="Alive 1">
+                    <img class="page" src="./assets/images/pages/lb_alive1.png" alt="Alive 1">
                     <!-- <img class="back_content" src="./assets/images/pages/page2.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -56,13 +56,13 @@
             <div class="page" id="page2">
                 <div class="front_page">
                     <label for="page2_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_alive2.png" alt="Alive 2">
+                    <img class="page" src="./assets/images/pages/lb_alive2.png" alt="Alive 2">
                     <!-- <img class="front_content" src="./assets/images/pages/page3.webp" alt="Front content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page2_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_alive3.png" alt="Alive 3">
+                    <img class="page" src="./assets/images/pages/lb_alive3.png" alt="Alive 3">
                     <!-- <img class="back_content" src="./assets/images/pages/page4.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -70,13 +70,13 @@
             <div class="page" id="page3">
                 <div class="front_page">
                     <label for="page3_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/LookbookDecay-part-1.png" alt="Decay 1">
+                    <img class="page" src="./assets/images/pages/LookbookDecay-part-1.png" alt="Decay 1">
                     <!-- <img class="front_content" src="./assets/images/pages/page5.webp" alt="Front content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page3_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/LookbookDecay-part-2.png" alt="Decay 2">
+                    <img class="page" src="./assets/images/pages/LookbookDecay-part-2.png" alt="Decay 2">
                     <!-- <img class="back_content" src="./assets/images/pages/page6.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -84,13 +84,13 @@
             <div class="page" id="page4">
                 <div class="front_page">
                     <label for="page4_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/LookbookDecay-part-3.png" alt="Decay 3">
+                    <img class="page" src="./assets/images/pages/LookbookDecay-part-3.png" alt="Decay 3">
                     <!-- <img class="front_content" src="./assets/images/pages/page7.webp" alt="Front content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page4_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_rebirth1 copy-1.png" alt="Rebirth 1">
+                    <img class="page" src="./assets/images/pages/lb_rebirth1 copy-1.png" alt="Rebirth 1">
                     <!-- <img class="back_content" src="./assets/images/pages/page8.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -98,13 +98,13 @@
             <div class="page" id="page5">
                 <div class="front_page">
                     <label for="page5_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_rebirth2 copy-1.png" alt="Rebirth 2">
+                    <img class="page" src="./assets/images/pages/lb_rebirth2 copy-1.png" alt="Rebirth 2">
                     <!-- <img class="front_content" src="./assets/images/pages/page9.webp" alt="Front content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page5_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_rebirth3 copy-1.png" alt="Rebirth 3">
+                    <img class="page" src="./assets/images/pages/lb_rebirth3 copy-1.png" alt="Rebirth 3">
                     <!-- <img class="back_content" src="./assets/images/pages/page10.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -113,13 +113,13 @@
             <div class="page" id="page6">
                 <div class="front_page">
                     <label for="page6_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_collage1 copy-1.png" alt="Collage 1">
+                    <img class="page" src="./assets/images/pages/lb_collage1 copy-1.png" alt="Collage 1">
                     <!-- <img class="back_content" src="./assets/images/pages/page10.webp" alt="Back content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page6_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_collage2 copy-1.png" alt="Collage 2">
+                    <img class="page" src="./assets/images/pages/lb_collage2 copy-1.png" alt="Collage 2">
                     <!-- <img class="back_content" src="./assets/images/pages/page10.webp" alt="Back content"> -->
                 </div>
             </div>
@@ -127,13 +127,13 @@
             <div class="page" id="page7">
                 <div class="front_page">
                     <label for="page7_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_collage3 copy-1.png" alt="Collage 3">
+                    <img class="page" src="./assets/images/pages/lb_collage3 copy-1.png" alt="Collage 3">
                     <!-- <img class="back_content" src="./assets/images/pages/page10.webp" alt="Back content"> -->
                 </div>
 
                 <div class="back_page">
                     <label for="page7_checkbox"></label>
-                    <img class="edge_shading" src="./assets/images/pages/lb_credits_page copy-1.png" alt="Credits">
+                    <img class="page" src="./assets/images/pages/lb_credits_page copy-1.png" alt="Credits">
                     <!-- <img class="back_content" src="./assets/images/pages/page10.webp" alt="Back content"> -->
                 </div>
             </div>
