Fixed broken image

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- GitHub link -->
         <a id="github-link" href="https://github.com/samanthafongg" target="_blank">
             <p> Visit my Github! </p> <br>
-            <img class="click-btn" src="/assets/images/click me.jpg" alt="Click me" >
+            <img class="click-btn" src="assets/images/click me.jpg" alt="Click me" >
                  </a>
 
         <!-- Responsive Warning -->
